# VinylScrobbler

./: .gitignore  README.md  config.py  main.py  pyproject.toml  settings.toml  system.py
.github/workflows/: deploy.yml
dependencies/: ListenerState.py  PlaybackState.py  auth.py  backend.py  database.py  dicsogs_collection.py  discogs_api.py  discogs_db.py  log_setup.py  spotify_api.py  system_state.py
lib/release/: liblibrespot.d  librespot.d
lib/release/.fingerprint/addr2line-993456b149ca70ad/: lib-addr2line  lib-addr2line.json
lib/release/.fingerprint/adler2-3818d3dc2a388e42/: lib-adler2  lib-adler2.json
lib/release/.fingerprint/aes-cb0bfcfc232cdb5a/: lib-aes  lib-aes.json
lib/release/.fingerprint/aho-corasick-4d4772d5fb0ef27d/: lib-aho_corasick  lib-aho_corasick.json
lib/release/.fingerprint/anstream-ab3c0d61d3cd94d2/: lib-anstream  lib-anstream.json
lib/release/.fingerprint/anstyle-5abc15d1fb28d483/: lib-anstyle  lib-anstyle.json
lib/release/.fingerprint/anstyle-parse-da20b2bd00fe8516/: lib-anstyle_parse  lib-anstyle_parse.json
lib/release/.fingerprint/anstyle-query-92cbb2a17035bfac/: lib-anstyle_query  lib-anstyle_query.json
lib/release/.fingerprint/anyhow-7abf70ac8454d10f/: run-build-script-build-script-build  run-build-script-build-script-build.json
lib/release/.fingerprint/cc-12bedbfcd8ce5c7a/: lib-cc  (+1 more)
services/: LibrespotService.py  ShazamRecognizer.py  SongRecognizer.py  audio_listener.py  shazam.py  song.py  song_recognizer.py  websocket.py
static/: index.html  main.html  settings.html
static/css/: style.css
static/js/: common.js
(+842 files in other folders)
