[project]
name = "vinylscrobbler"
version = "0.1.0"
description = ""
authors = [
    {name = "dksokoiv",email = "soren.iversen@lego.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dynaconf (>=3.2.10,<4.0.0)",
    "shazamio (>=0.8.0,<0.9.0)",
    "sounddevice (>=0.5.1,<0.6.0)",
    "ffmpeg (>=1.4,<2.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "discogs-client (>=2.3.0,<3.0.0)",
    "pylast (>=5.5.0,<6.0.0)",
    "fuzzywuzzy (>=0.18.0,<0.19.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
